2004-09-28  Teodor Zlatanov  <tzz@lifelogs.com>

	* hashcash.el (hashcash-generate-payment)
	(hashcash-check-payment): do the right thing if hashcash-path is
	nil (because the hashcash program could not be found)

	* spam.el (spam-use-hashcash): remove comment

2004-09-27  Jesper Harder  <harder@ifa.au.dk>

	* gnus-cache.el (gnus-cache-possibly-remove-articles-1)
	(gnus-cache-enter-article, gnus-cache-remove-article)
	(gnus-cache-braid-heads, gnus-cache-generate-active): Use dolist.

	* gnus-async.el (gnus-async-prefetch-remove-group): do.

	* gnus-art.el (article-hide-boring-headers)
	(article-translate-strings, article-display-face)
	(gnus-article-mime-match-handle-first)
	(gnus-article-highlight-headers)
	(gnus-article-add-buttons-to-head): do.

2004-09-27  Simon Josefsson  <jas@extundo.com>

	* hashcash.el: New version, from
	http://users.actrix.co.nz/mycroft/hashcash.el.  Previously in
	../contrib/.

2004-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-copy-to-buffer): Don't use set-buffer-multibyte.

2004-09-26  Jesper Harder  <harder@ifa.au.dk>

	* gnus-dup.el (gnus-dup-open): Use mapc.
	(gnus-dup-enter-articles, gnus-dup-suppress-articles): Use dolist.
	
	(gnus-dup-enter-articles): Remove excess ID's from gnus-dup-hashtb.
	Reported by Stefan Wiens <s.wi@gmx.net>.

	* gnus.el (gnus-shutdown): Use dolist.

	* gnus-undo.el (gnus-undo): Use mapc.

	* nnrss.el (nnrss-generate-active): do.

	* message.el (message-cite-original-without-signature)
	(message-cite-original): Use mapc.
	(message-do-actions, message-make-forward-subject): Use dolist.

2004-09-25  Kevin Greiner  <kgreiner@compsol.cc>

	* gnus-agent.el (gnus-agent-check-overview-buffer): Fixed range of
	deletion to remove entire duplicate line.  Fixes merged article
	number bug.
	
2004-09-25  Kevin Greiner  <kgreiner@compsol.cc>

	* gnus-agent.el (gnus-agent-possibly-synchronize-flags): Ignore
	servers that are offline.  Avoids having gnus-agent-toggle-plugged